--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -18,5 +18,10 @@
         <h1>My Astro Site</h1>
         <h1>My Astro Learning Blog</h1>
         <p>This is where I will post about my journey learning Astro.</p>
+
+        <ul>
+            <li><a href="/post/post-1/">Post 1</a></li>
+            <li><a href="/post/post-2/">Post 2</a></li>
+        </ul>
 	</body>
 </html>
