--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,7 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-        <a href="/">Hom000000000e</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
       
